syntax = "proto3";

package app.order.cmd.rpc.pb;
option go_package = "./;order_grpc";

service OrderService {
	rpc OrderInfo (OrderRequest) returns (OrderResponse) {}
}

//==========================
message OrderRequest {
		int32 id=1;	 //传入person id
}

message OrderResponse {
	string name = 1;
	int32 id = 2;
	string email = 3;
	enum PhoneType {
		MOBILE = 0;
		HOME = 1;
		WORK = 2;
	}
	message PhoneNumber {
		string number = 1;
		PhoneType type = 2;
	}
	repeated PhoneNumber phones = 4;
}